added social media

--- a/src/Project.css
+++ b/src/Project.css
@@ -23,7 +23,7 @@ img.project__img::after{
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #f9004d;
+    background-color: #00f995;
     border-radius: 10px;
     transition: .4s;
     opacity: .3;
